src-tauri/tests/snapshots/parsers_snapshot__hermes_detail.snap
---
source: tests/parsers_snapshot.rs
expression: detail
---
{
  "summary": {
    "id": "hermes-sess-001",
    "agent_type": "hermes",
    "folder_path": "/Users/demo/proj",
    "folder_name": "proj",
    "title": "助手能力介绍",
    "started_at": "[ts]",
    "ended_at": "[ts]",
    "message_count": 5,
    "model": "gpt-5.5",
    "git_branch": null
  },
  "turns": [
    {
      "id": "turn-0",
      "anchor_id": "user:8053b85bd3d16798b83707e1",
      "role": "user",
      "blocks": [
        {
          "type": "text",
          "text": "看这个并修复"
        },
        {
          "type": "image",
          "data": "QUJD",
          "mime_type": "image/png"
        }
      ],
      "timestamp": "[ts]",
      "completed_at": "[ts]"
    },
    {
      "id": "turn-1",
      "role": "assistant",
      "blocks": [
        {
          "type": "thinking",
          "text": "先读文件，再打补丁"
        },
        {
          "type": "text",
          "text": "我来读取并修复"
        },
        {
          "type": "tool_use",
          "tool_use_id": "call_1",
          "tool_name": "read_file",
          "input_preview": "{\"path\":\"a.txt\"}"
        },
        {
          "type": "tool_use",
          "tool_use_id": "call_2",
          "tool_name": "patch",
          "input_preview": "{\"path\":\"a.txt\"}"
        },
        {
          "type": "tool_result",
          "tool_use_id": "call_1",
          "output_preview": "line1\nline2",
          "is_error": false
        },
        {
          "type": "tool_result",
          "tool_use_id": "call_2",
          "output_preview": "patched ok",
          "is_error": false
        }
      ],
      "timestamp": "[ts]",
      "model": "gpt-5.5",
      "completed_at": "[ts]"
    },
    {
      "id": "turn-2",
      "role": "assistant",
      "blocks": [
        {
          "type": "text",
          "text": "完成"
        }
      ],
      "timestamp": "[ts]",
      "model": "gpt-5.5",
      "completed_at": "[ts]"
    }
  ],
  "session_stats": {
    "total_usage": {
      "input_tokens": 11446,
      "output_tokens": 203,
      "cache_creation_input_tokens": 0,
      "cache_read_input_tokens": 0
    },
    "total_tokens": 11649,
    "total_duration_ms": 0,
    "context_window_max_tokens": 258000
  }
}
